Fixed bug with z-index

--- a/src/app/shared/context-menu/context-menu.component.scss
+++ b/src/app/shared/context-menu/context-menu.component.scss
@@ -3,7 +3,7 @@
   background: white;
   border: 1px solid #ccc;
   box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.3);
-  z-index: 1000;
+  z-index: 99;
   list-style: none;
 
   li {
