--- a/src/app/shared/result-menu/result-menu.component.scss
+++ b/src/app/shared/result-menu/result-menu.component.scss
@@ -1,5 +1,6 @@
 #result-menu-wrapper {
   position: fixed;
+  z-index: 100;
   top: 8em;
   left: 0;
   cursor: pointer;
